--- a/css/main.css
+++ b/css/main.css
@@ -59,7 +59,7 @@ a{
 .front-container h1{
     font-size: 65px;    
     font-weight:lighter;
-    margin:0 auto;
+    
 
    
 }
@@ -125,9 +125,8 @@ a{
 .main-nav li a{
     color:white;
     text-decoration:none;  
-    font-size: 19px; 
-    font-family: 'Chivo', sans-serif;
-    font-weight: 100;
+    font-size: 20px; 
+    font-weight: lighter;
 
 
 }
@@ -149,9 +148,7 @@ a{
     height:200px;   /*todo: make it number of elements in  using js*/  
     }
 
-.con:hover .bar,.special-con:hover .bar {
-  
-}
+
  
  .col {
    display: inline-block;
@@ -380,9 +377,6 @@ justify-content:center;
 }
 
 
-
-
-
 label {
     font-size:12px;	
     width: 35vw;
@@ -405,9 +399,6 @@ form{
     width:45vw;
     transition: background-color 2.5s ease;
 }
-    
-
-
 
 .content-section{
     margin:auto;
@@ -415,16 +406,13 @@ form{
     padding:1%;
     width:96%;
 }
-    
-     
    
-    
-    .container p{
-    font-weight:normal;
-    line-height: 22px;
-    
-   
-    }
+.container p{
+font-weight:normal;
+line-height: 22px;
+
+
+}
 
 .b{
     display:flex;
@@ -489,59 +477,34 @@ canvas{
     
     }
 
-    .scrollButtons{
-    display:flex;
-    flex-direction:column;
-    justify-content:center;   
-    top:30vh;
-    left: 85vw;  
-    z-index:1;
-    position:absolute;    
-    }
-
-    .sb{
-        margin:1em 0 1em 0;
-        width:60px;
-        height:60px;
-        font-size:35px;
-
-    }
-
-    #scrollDownButton a{
-    text-decoration: none;
-    color:white;
-    }
-    
-    .IconColor{
-    color:white;
+.scrollButtons{
+display:flex;
+flex-direction:column;
+justify-content:center;   
+top:30vh;
+left: 85vw;  
+z-index:1;
+position:absolute;    
 }
 
-.movingDownIcon{
-    
-         animation: bounce 2s linear infinite;    
-         font-size:55px;
+.sb{
+    margin:1em 0 1em 0;
+    width:60px;
+    height:60px;
+    font-size:35px;
+
 }
 
+#scrollDownButton a{
+text-decoration: none;
+color:white;
+}
 
+.IconColor{
+color:white;
+}
 
-@keyframes bounce {
-    0%, 100% {
-      transform: translate(0, 0);
-      
-    }
-    
-    50% {
-      transform: translate( 0, 13px);
-      
-    }
-    
-    80% {
-      transform: translate( 0, -13px,);
-      
-    }
-  }
-
-    
+ 
 /*media content*/
 .large-image{
     display:flex;
@@ -556,6 +519,10 @@ canvas{
 }
 
 
+.igTilesContainer{
+    display:flex;
+    flex-direction:column;
+}
 .iframe-container-169 {
     overflow: hidden;
     padding-top: 71.25%;
@@ -601,10 +568,72 @@ canvas{
 
 
 
- 
+  .igTile{
+    text-align:center;    
+    align-content: center;  
+    
+}
 
+*{
+
+    font-family:arial;
+  }
+  
+  button{
+    margin:0 auto;
+  }
+  .checkBoxContainer{
+    display:flex;
+    flex-direction: column;
+  }
+  form{
+    background:whitesmoke;
+    line-height: 25px;
+    display:flex;
+    flex-direction:column;
+    
+  }
+  .formButtonContainer{
+    margin:0 auto;
+  }
+  
+  h1{
+   text-align:left; 
+  }
+  
+  input{  
+  
+  }
+  label {
+    float: left;
+      text-align: right;
+      margin-right: 15px;
+      width: 150px;
+  }
+  #main{
+    
+    max-width:100%;
+    height:auto;
+    border: 3px;
+    padding:3px;
+  }
+  
+  
+  
+  
+  
+  
+  textarea{
+    width:150px;
+  }
+  textarea:focus, input:focus {
+      border: 2px solid #900;
+  }
+  #title{
+    text-align:center;
+  }
     /*desktop settings*/
-  @media screen and (min-width: 770px) {
+  @media screen and (min-width: 870px) {
     
     
     .inLineHeaderContainer {
@@ -722,6 +751,27 @@ canvas{
 
     .content-description{
         font-size:1.1em;
+    }
+
+    .igTilesContainer{
+        display:grid;
+    grid-template-columns: 49% 49%;
+  grid-template-rows: auto auto; 
+  grid-column-gap: 10px;
+  grid-row-gap: 15px;
+    }
+
+   
+    .blockquoteConainer{
+        width:100%;
+
+    }
+    blockquote{
+        width:100%;
+    }
+
+    .instagam-media{
+        width:100%;
     }
 }
 
