--- a/css/main.css
+++ b/css/main.css
@@ -13,11 +13,15 @@ body{
     color: #2f3030;
 
 }
+blockquote{
+    width:100%;
+}
 canvas{
     margin:0;
     padding:0;
 }
 
+#interactivity{ width:80%;}
 .main-header{
     display:flex;
     flex-direction: row;
@@ -44,30 +48,27 @@ a{
     
     position:absolute;
     z-index:1;
-    width:90vw;
-  
-    top:50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    width:70vw;
+    padding: 1% 1%;
     font-family: 'Habibi', serif;
-    text-align:center;
-
+    text-align: left;
     
 
     
 }
 .front-container h1{
     font-size: 65px;    
-    font-weight:lighter;
-    
+    font-weight:300;
+    font-family: 'Habibi', serif;
+
 
    
 }
 
 .front-container h2{
     font-size:40px;
-    font-family: 'Chivo', serif;
-
+    font-weight:300;
+    font-family: 'Habibi', serif;
 }
 
 
@@ -227,8 +228,8 @@ a{
 .container{        
     width:100%;
     padding:0;
-    
-    
+    display:flex;
+    flex-direction:column;
        
     background-color: whitesmoke;
 }
@@ -520,8 +521,15 @@ color:white;
 
 
 .igTilesContainer{
-    display:flex;
-    flex-direction:column;
+    display:grid;
+grid-template-columns: 100%;
+grid-row-gap: 15px;
+}
+
+.igTile{
+    padding:1%;
+
+
 }
 .iframe-container-169 {
     overflow: hidden;
@@ -537,7 +545,6 @@ color:white;
   
 .iframe-container-169 iframe {
     border: 0;
-    height: 100%;
     
     position: absolute;
     top: 0;
@@ -546,13 +553,18 @@ color:white;
 
 .iframe-container-43 iframe {
     border: 0;
-    height: 100%;
-    
     position: absolute;
     top: 0;
     width: 100%;
 }
 
+iframe{
+    width:100%;
+    margin:0 auto;
+    border:0;
+    height: 100%;
+   
+}
 
 .come-in {
     transform: translateY(10vh);
@@ -568,11 +580,6 @@ color:white;
 
 
 
-  .igTile{
-    text-align:center;    
-    align-content: center;  
-    
-}
 
 *{
 
@@ -587,6 +594,8 @@ color:white;
     flex-direction: column;
   }
   form{
+      margin:0 auto;
+      border:solid 1px grey;
     background:whitesmoke;
     line-height: 25px;
     display:flex;
@@ -601,9 +610,7 @@ color:white;
    text-align:left; 
   }
   
-  input{  
-  
-  }
+
   label {
     float: left;
       text-align: right;
@@ -617,10 +624,6 @@ color:white;
     border: 3px;
     padding:3px;
   }
-  
-  
-  
-  
   
   
   textarea{
@@ -643,6 +646,22 @@ color:white;
          
     }
 
+    .front-container h1{
+        font-size: 65px;    
+        font-weight:300;
+        font-family: 'Habibi', serif;
+        display:block;
+        margin: 2% auto auto 2%;
+       
+    }
+    
+    .front-container h2{
+        font-size:40px;
+        font-weight:300;
+        font-family: 'Habibi', serif;
+        display:block;
+
+    }
     #navElementsContainer{    
         display: flex;
         flex-direction:row;  
@@ -677,6 +696,7 @@ color:white;
     .main-nav li {
 
         height:27px;
+
 
     }
 
@@ -732,8 +752,12 @@ color:white;
         position:absolute;    
         }
     #gui-container1, #gui-container2, #gui-container3 {    
-        left:3em;        
-        top:75%;
+        position: absolute;
+    top: 70%;
+    left: 1em;
+    z-index: 1;
+    height:40vh;
+    text-align: center;
         
     }
 
@@ -751,27 +775,61 @@ color:white;
 
     .content-description{
         font-size:1.1em;
+        background-color: whitesmoke;
     }
 
     .igTilesContainer{
+        background-color: whitesmoke;
+
         display:grid;
-    grid-template-columns: 49% 49%;
-  grid-template-rows: auto auto; 
-  grid-column-gap: 10px;
-  grid-row-gap: 15px;
-    }
+        margin:0 2% 0 2%;
+    grid-template-columns: 50% 50%;
 
+        }
+    .igTile{
+        display:flex;
+        flex-direction: column;
+        height:100%;
    
-    .blockquoteConainer{
-        width:100%;
-
-    }
-    blockquote{
-        width:100%;
     }
 
-    .instagam-media{
-        width:100%;
+    .iframe-container-169 {
+        overflow: hidden;
+        padding-top: 71.25%;
+        position: relative;
+        max-height: 500px;
+
     }
+    
+    .iframe-container-43 {
+        overflow: hidden;
+        padding-top: 96.25%;
+        position: relative;
+        max-height: 500px;
+
+    }
+      
+    .iframe-container-169 iframe {
+        border: 0;
+        
+        position: absolute;
+        top: 0;
+        width: 100%;
+    }
+    
+    .iframe-container-43 iframe {
+        border: 0;
+        position: absolute;
+        top: 0;
+        width: 100%;
+    }
+    
+  
+    
+    
+    
+   
+  
+
 }
 
