--- a/css/main.css
+++ b/css/main.css
@@ -50,7 +50,7 @@ a{
     position:absolute;
     z-index:1;
     width:70vw;
-    padding: 1% 1%;
+    padding: 1% 3%;
     font-family: 'Habibi', serif;
     text-align: left;
     
@@ -58,8 +58,8 @@ a{
     
 }
 .front-container h1{
-    font-size: 65px;    
-    font-weight:300;
+    font-size: 45px;    
+    font-weight:550;
     font-family: 'Habibi', serif;
     text-shadow: whitesmoke 1px 1px;
 
@@ -249,13 +249,12 @@ a{
     min-width: 270px;
     font-size: 2em;
     text-align:left;
-    padding:0 0 .5% 2%;
+    padding:.5% 0 .5% 2%;
     font-weight: lighter;
     color:whitesmoke;
     text-align: left;
     font-family: 'Habibi', serif;
-    background-color:#2f3030;
-    
+    background-color:#2f3030;    
 }
 
 .stay{
@@ -264,10 +263,19 @@ a{
 .section-list-long    {  
     list-style-type: none;
     padding:0.3em 0 0.3em 0;
-    font-family: 'Palanquin', sans-serif;
+    font-family: 'Palanquin', sans-serif;  
+    font-weight: lighter;    
+ 
+}
 
+.section-list-long li{
+    padding: 1%;
+    margin:3px;
+    width:100%; 
     
 }
+
+
 
 .section-list  {  
     width:100%;
@@ -407,6 +415,9 @@ form{
     text-align:left;
 }
 
+.whiteLink{
+    color:whitesmoke;
+}
 .content-section{
     margin:auto;
     text-align: left;
@@ -709,10 +720,6 @@ grid-row-gap: 15px;
         height:auto;
     }
 
-    .main-nav a{
-        font-size: 21px;
-    }
-
     .main-nav li {
 
         height:27px;
@@ -722,6 +729,8 @@ grid-row-gap: 15px;
 
     
     .main-nav a {
+        font-size: 21px;
+
         color:white;
         margin-right:3vw;
         position:sticky;
