--- a/css/main.css
+++ b/css/main.css
@@ -545,19 +545,23 @@ grid-row-gap: 15px;
 
 .igTile{
     padding:1%;
+}
 
-
+.ImgTile{
+   text-align: center;
 }
 .iframe-container-169 {
     overflow: hidden;
     padding-top: 71.25%;
     position: relative;
+    min-height:15px;
 }
 
 .iframe-container-43 {
     overflow: hidden;
     padding-top: 96.25%;
     position: relative;
+    min-height:117px;
 }
   
 .iframe-container-169 iframe {
@@ -567,6 +571,7 @@ grid-row-gap: 15px;
     top: 0;
     width: 100%;
     height:100%;
+    max-height: 600px;
 }
 
 .iframe-container-43 iframe {
@@ -654,6 +659,9 @@ grid-row-gap: 15px;
   }
   
   
+  .placeHolderImg{
+      width:80%;
+  }
   textarea{
     width:150px;
   }
